rota para pegar todos os books concluido